# anirra

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh  supervisord.conf
.github/actions/run-cypress-tests/: action.yaml
frontend/: next.config.ts
frontend/cypress/e2e/: basic.cy.ts
frontend/src/components/auth/: login-modal.tsx
frontend/src/components/pages/anime/: get-server-side-props.ts
frontend/src/components/pages/landing/: get-server-side-props.ts  landing.tsx
frontend/src/pages/: _document.tsx
frontend/src/pages/api/: [...path].ts
frontend/src/pages/api/auth/: [...nextauth].ts
frontend/src/pages/auth/: signout.tsx
src/saas_backend/: startup.py
src/saas_backend/anime/: router.py  utils.py
src/saas_backend/auth/: constants.py  router.py
src/saas_backend/integrations/: convert_to_watchlist.py
src/saas_backend/scripts/: load_database.py
src/saas_backend/tests/auth/: test_header_login.py
